# BlogFastAPI

./: .gitignore  auth.py  config.py  database.py  email_utils.py  main.py  models.py  populate_db.py  pyproject.toml  render.yaml  schemas.py
alembic/: env.py
alembic/versions/: 5af58a7cf79b_add_likes_to_posts.py  899e2d82f805_initial_schema.py
routers/: posts.py  users.py
templates/: account.html  error.html  forgot_password.html  home.html  login.html  post.html  register.html  reset_password.html
templates/email/: password_reset.html
